--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "multer": "1.4.2",
     "npm": "6.9.0",
     "passport": "0.4.0",
-    "passport-local": "1.0.0"
+    "passport-local": "1.0.0",
+    "node-schedule": "^1.3.2"
   },
   "devDependencies": {
     "@types/jquery": "3.3.30",
@@ -37,12 +38,12 @@
     "gulp-remove-logging": "1.2.0",
     "gulp-rigger": "0.5.8",
     "gulp-sass": "4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-ts-link": "1.1.1",
     "gulp-typescript": "5.0.1",
     "gulp-uglify": "3.0.2",
     "jquery": "3.4.1",
     "node-sass": "4.12.0",
-    "node-schedule": "^1.3.2",
     "typescript": "3.5.3"
   }
 }
