--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "npm": "6.9.0",
     "passport": "0.4.0",
     "passport-local": "1.0.0",
-    "node-schedule": "^1.3.2"
+    "node-schedule": "1.3.2"
   },
   "devDependencies": {
     "@types/jquery": "3.3.30",
     "browser-sync": "2.26.5",
     "del": "4.1.1",
+    "ejs": "2.6.2",
     "gulp": "4.0.2",
     "gulp-autoprefixer": "6.1.0",
     "gulp-cached": "1.1.1",
@@ -38,7 +39,7 @@
     "gulp-remove-logging": "1.2.0",
     "gulp-rigger": "0.5.8",
     "gulp-sass": "4.0.2",
-    "gulp-sourcemaps": "^2.6.5",
+    "gulp-sourcemaps": "2.6.5",
     "gulp-ts-link": "1.1.1",
     "gulp-typescript": "5.0.1",
     "gulp-uglify": "3.0.2",
